# shaku-generic-components

./: Cargo.toml  README.md
src/: main.rs
