[package]
name = "shaku-generic-components"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.shaku]
version = "0.4.1"

[dependencies.async-trait]
version = "0.1.31"

[dependencies.async-std]
version = "1.6.0"
features = ["attributes"]
